# sitekapinda

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  SUBMISSION_MANIFEST.json  pyproject.toml
.agents/plugins/: marketplace.json
apps/sites-demo/: ASSET_PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.ts
apps/sites-demo/.openai/: hosting.example.json  hosting.json
apps/sites-demo/app/: globals.css  layout.tsx  page.tsx
apps/sites-demo/tests/: rendered-html.test.mjs
codex/: MODEL_ROUTING.md
codex/automations/: hourly-discovery.example.md
codex/prompts/: discovery.v1.md  preview.v1.md  qa.v1.md  site-builder.v1.md
data/: mock_places.json
docs/: ARCHITECTURE.md  BUILD_WEEK_CHANGES.md  CODEX_USAGE.md  JUDGE_TEST_GUIDE.md  SAFETY_AND_DATA_BOUNDARY.md
plugins/sitekapinda/.codex-plugin/: plugin.json
plugins/sitekapinda/skills/sitekapinda-discover/: SKILL.md
scripts/: bootstrap.ps1  bootstrap.sh  doctor.ps1  doctor.sh  run_hourly.ps1  run_hourly.sh  run_once.ps1  run_once.sh  start_demo.ps1  start_demo.sh
src/sitekapinda/: __init__.py  cli.py  compliance.py  config.py  constants.py  demo_layouts.py  models.py  page_generation.py  persistence.py  pipeline.py  reporting.py  sales.py  scoring.py  text.py
src/sitekapinda/panel_assets/: __init__.py  admin.css  admin.js  index.html
src/sitekapinda/providers/: __init__.py  base.py  google_places.py  mock.py
tests/: test_compliance.py  test_page_generation.py  test_pipeline.py  test_sales.py  test_scoring.py  test_submission_fixture.py
(+14 files in other folders)
