[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sitekapinda"
version = "0.1.3"
description = "Synthetic lead discovery and private noindex website-preview reference implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "SiteKapında" }]
license = { file = "LICENSE" }
keywords = ["codex", "agents", "small-business", "website-preview"]

[project.scripts]
sitekapinda = "sitekapinda.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sitekapinda.panel_assets" = ["*.html", "*.css", "*.js", "*.svg", "mockups/*.png"]
"sitekapinda" = ["demo_assets/*/*.png"]
